# Game-Of-Life

./: main.py  pyproject.toml
pylife/: __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
