[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools-build-meta"

[project]
name="pylife"
dynamic = ["version"]
description = "Conways Game of Life in your Terminal"
readme = "README.md"
authors = [{name = "Ross O'Reilly", email = "devguy@duck.com"}]
dependencies = [
  'tomli; python_version < "3.11"'
]

[project_scripts]
pylife = "pylife.__main__:main"

[tools.setuptools.dynamic]
version = {attr = "pylife.__version__"}